// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadCrumbs test suite: dataCy 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="custom"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <h3
        className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        PAGE
      </h3>
    </li>
  </ol>
</nav>
`;

exports[`BreadCrumbs test suite: icon 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1vtbjnd-MuiTypography-root-MuiLink-root"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <h3
          className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
          data-cy="typography"
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-e5efhf-MuiSvgIcon-root"
            data-cy="icon"
            data-testid="HomeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
          HOME
        </h3>
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <h3
        className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-e5efhf-MuiSvgIcon-root"
          data-cy="icon"
          data-testid="BusinessIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
          />
        </svg>
        PAGE
      </h3>
    </li>
  </ol>
</nav>
`;

exports[`BreadCrumbs test suite: onClick 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1vtbjnd-MuiTypography-root-MuiLink-root"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <h3
          className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
          data-cy="typography"
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          HOME
        </h3>
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <h3
        className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        PAGE
      </h3>
    </li>
  </ol>
</nav>
`;

exports[`BreadCrumbs test suite: primary 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <h3
        className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        PAGE
      </h3>
    </li>
  </ol>
</nav>
`;

exports[`BreadCrumbs test suite: separator 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <h3
        className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        PAGE
      </h3>
    </li>
  </ol>
</nav>
`;

exports[`BreadCrumbs test suite: size - large 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <h1
        className="MuiTypography-root MuiTypography-h5 css-19bb5qq-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        PAGE
      </h1>
    </li>
  </ol>
</nav>
`;

exports[`BreadCrumbs test suite: size - medium 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 css-tho60i-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        PAGE
      </h2>
    </li>
  </ol>
</nav>
`;
